remove GC logging